--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <!-- شاشة تسجيل دخول المدير -->
-    <div id="adminLoginOverlay" class="admin-login-overlay">
+    <!-- شاشة تسجيل دخول المدير (مخفية الآن بشكل افتراضي) -->
+    <div id="adminLoginOverlay" class="admin-login-overlay hidden">
         <div class="admin-login-box">
             <h2>تسجيل دخول المدير</h2>
             <input type="password" id="adminPasswordInput" placeholder="أدخل كلمة السر">
@@ -22,11 +22,9 @@
         <header class="header">
             <h1>قصص شيقة</h1>
             <p>استكشف عالماً من الخيال والمغامرة</p>
-            <!-- هذا الزر مخفي بشكل افتراضي وسيظهر فقط بعد تسجيل الدخول -->
             <button id="addStoryBtn" class="add-story-button hidden">أضف قصة جديدة +</button>
         </header>
 
-        <!-- (بقية الكود لم يتغير) -->
         <div class="search-container">
             <input type="text" id="searchInput" class="search-input" placeholder="ابحث عن قصة...">
         </div>
@@ -37,15 +35,22 @@
             <button class="category-btn" data-category="كوميديا">كوميديا</button>
             <button class="category-btn" data-category="غموض">غموض</button>
         </div>
+
         <div class="ad-space">
             <h4>إعلان</h4>
             <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-XXXXXXXXXXXXXXXX" data-ad-slot="YYYYYYYYYY" data-ad-format="auto" data-full-width-responsive="true"></ins>
         </div>
+
         <div class="stories-grid" id="stories-grid"></div>
+
         <footer class="footer">
             <p>جميع الحقوق محفوظة © 2024</p>
+            <!-- أيقونة تسجيل دخول المدير الجديدة -->
+            <div id="adminLoginIcon" class="admin-icon" title="لوحة تحكم المدير">⚙️</div>
         </footer>
     </div>
+
+    <!-- (بقية الملف لم تتغير) -->
     <div class="story-modal" id="storyModal">
         <div class="modal-content">
             <span class="close-btn" id="closeModalBtn">×</span>
